@@ -48,8 +48,9 @@ Additions:
    > Dark Orb
    > Ice II
    > Wyvern's Fury
- - Added 74 new items:
-  ~ 11 recovery/buff items:
+ - Added 75 new items:
+  ~ 12 recovery/buff items:
+   > Well-Rounded Combination
    > Large Potion
    > Large Elixir
    > Water Jug
